header z-index fix

--- a/styles/sass/components/_header.sass
+++ b/styles/sass/components/_header.sass
@@ -4,6 +4,7 @@
   top: 0
   width: 100%
   color: $dark-color
+  z-index: 2
   &__line
     height: 60px
     display: flex
