--- a/styles/sass/sections/_section-market.sass
+++ b/styles/sass/sections/_section-market.sass
@@ -14,6 +14,7 @@
     bottom: -60px
     left: 0
     right: 0
+    z-index: 1
   &__top-bar
     margin-top: 60px
     display: flex
